...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_create_event_fragment"
    tools:context=".ui.event.CreateEventFragment">

...

                <Button
                    android:id="@+id/cancel_create_event"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
...

                <Button
                    android:id="@+id/submit_create_event"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
...

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_location"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...
                            android:textSize="20sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="@id/inputDate"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@id/inputDate" />
...

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/all_day"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
...
                                android:textSize="20sp"
                                android:textStyle="bold"
                                app:layout_constraintBottom_toBottomOf="@id/inputTimeFrom"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="@id/inputTimeFrom" />
...

                            <Button
                                android:id="@+id/inputTimeTo"
                                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                                android:layout_width="wrap_content"
...
                                app:layout_constraintStart_toEndOf="@id/connecting_word"
                                app:layout_constraintTop_toTopOf="@id/inputTimeFrom"
                                tools:text="04:02" />

                            <com.google.android.material.textfield.TextInputLayout
...

                            <com.google.android.material.switchmaterial.SwitchMaterial
                                android:id="@+id/conflict_check"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/event_url"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/event_notes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                        <Button
                            android:id="@+id/delete_event"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                            android:layout_width="match_parent"
...
