...
    <string name="title_calendar">Calendar</string>
    <string name="title_create_event">Create Event</string>
    <string name="add">Add</string>
    <string name="next_month_calendar">next_month_calendar</string>
    <string name="title">Title</string>
    <string name="location">Location</string>
    <string name="all_day">All-Day</string>
    <string name="repeat">Repeat</string>
    <string name="url">URL</string>
    <string name="notes">Notes</string>
    <string name="add_new_item">New Event</string>
    <string name="dot_image">dot_image</string>
    <string name="nothing">nothing</string>
...
    <string name="past_events">Past</string>
    <string name="forward_button">forward_button</string>

    <!-- AlertDialog Buttons -->
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="search">Search</string>
    <string name="calendar_app_notification_id" translatable="false">event_channel</string>
    <string name="calendar_app_notification_channel_name" translatable="true">Event</string>
    <string name="snooze">Snooze</string>
    <string name="notification_title">Event Title</string>
    <string name="event_coming_up">Notice! event coming up</string>
...
