...
    android:id="@+id/layout_dashboard_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/event_list_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:clipToPadding="false"
        android:focusable="true"
        android:padding="16dp"
...
